syntax = "proto3";

package compilation_cache_service.keyvalue.v1;

// KeyValueDB service for cache lookups
service KeyValueDB {
  rpc GetValue(GetValueRequest) returns (GetValueResponse);
}

message GetValueRequest {
  bytes key = 1;
}

message GetValueResponse {
  bool found = 1;
  bytes value = 2;
}